# SkiSpecAI

./: .gitignore  Dockerfile  README.md  app.py  index.html  pyproject.toml
eval/: golden_dataset.py  run_eval.py
