[project]
name = "tiny-llama-web-chat"
version = "0.1.0"
description = "Web chat interface using TinyLlama model with FastAPI"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "transformers>=4.36.0,<5",
    "torch>=2.1.0,<=2.2.2",
    "accelerate>=0.20.0",
    "numpy<2",
]
